<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btncloseAddCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/closeAddCity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btncloseAddCity"
            android:layout_centerHorizontal="true"
            android:text="@string/addcityTitle" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/menu_bottom" />

    <View
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:focusableInTouchMode="true" />
    <!-- 强制获得焦点，这样界面初始化时软键盘就不会弹出 -->

    <EditText
        android:id="@+id/edfindCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/findCity" />

    <ListView
        android:id="@+id/findCityListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp">
    </ListView>

</LinearLayout>